# pcc

./: .env  .env_sample  .gitignore  pyproject.toml  readme.md  streamlit_app.py  test.py
data/memories/: 0a6a83e0-4a89-4628-9921-87fee47a8af5.jsonl  13071a83-3f87-4dbf-8c11-0fb36976531b.jsonl  2ca1f674-2ec3-4a51-8fdf-28b813e705c1.jsonl  36bc6228-13c3-4933-ad33-ca23e8beeef7.jsonl  3e7e2544-0156-4a72-86e5-8339707de139.jsonl  44820b5a-6336-49da-96e2-0e89fc51f94f.jsonl  4c9955b3-ea06-43ba-b4d5-11fa3a0ce778.jsonl  4f522f0a-f4f9-4330-9f41-bd8404fcb782.jsonl  51c8dcad-d05e-454a-a49c-e3e3bd7b1c6d.jsonl  56700ad0-8323-4953-abc3-73016de37a8c.jsonl  7087f09b-cff5-4d7b-b956-20101fc14610.jsonl  72651abe-9682-4359-aa73-f6f2e3c4add6.jsonl  83efe0be-5efc-4f4a-9762-7b1c10a0a314.jsonl  a0fcd9a2-13af-4bca-ac88-efc4e4c313b3.jsonl  a49cd705-b41f-4b55-b842-26e0a03bbe88.jsonl  c138c5a7-7d92-4b03-8890-3b80e0e2a32c.jsonl  cec95c74-2d1d-45b0-ad8c-d6c408f4c472.jsonl  d0c9ec26-dbb9-45f2-b7c5-02229acd4d46.jsonl  d2520cc6-a39a-4f59-a182-d9b07f3dbff3.jsonl  dcc6003d-7682-4219-a394-462a3f13ce32.jsonl  e1bf6718-6f18-4908-b4ff-4a0d94db6d2b.jsonl  eaeafb55-e4fb-43dd-9083-dd61b9a58e1d.jsonl  f30ce723-212d-40b9-874d-d732c98077ec.jsonl  sub-224ef9086eae44a196ff87f69a989790.jsonl  sub-4394581bed344ea7b8332987f59423db.jsonl  sub-5c2a9720b2ee443199cd4ee48dffbaa8.jsonl  user_session_mapping.json
src/: cli.py  config.py  main.py  memory_manager.py  userInfo.py
src/agent/: __init__.py  agent_manager.py  llm_factory.py  model_config.py  model_selection.py
src/api/: __init__.py  deps.py
src/core/: config.py
(+17 files in other folders)
